# Statistical-Rethinking-2Ed

./: .gitignore  README.md  pyproject.toml  rethinking.py
chapters/2/: exercises.ipynb  samples.ipynb
chapters/3/: exercises.ipynb  sampling.ipynb
chapters/4/: exercises.ipynb  samples.ipynb
chapters/5/: exercises.ipynb  samples.ipynb
chapters/6/: exercises.ipynb  samples.ipynb
chapters/7/: exercises.ipynb  samples.ipynb
chapters/8/: exercises.ipynb  samples.ipynb
chapters/9/: samples.ipynb
data/: Laffer.csv  lds.csv
