[tool.poetry]
name = "statistical-rethinking-2ed"
version = "0.1.0"
description = "Exercise solutions to Statistical Rethinking 2Ed"
authors = ["Gustavo-SF <gustavo.fonseca@outlook.pt>"]

[tool.poetry.dependencies]
python = "~3.10"
notebook = "^6.4.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
matplotlib = "^3.5.3"
pymc = "^4.1.7"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
