[tool.poetry]
name = "rethinking"
version = "0.1.0"
description = "Exercise solutions to Statistical Rethinking 2Ed"
authors = ["Gustavo-SF <gustavo.fonseca@outlook.pt>"]

[tool.poetry.dependencies]
python = ">3.8,<4.0"
notebook = "^6.4.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
matplotlib = "^3.5.3"
pymc = "^4.1.7"
seaborn = "^0.12.0"
arviz = "^0.12.1"
pandas = "^1.4.4"
patsy = "^0.5.2"
causalgraphicalmodels = "^0.0.4"
daft = "^0.1.2"
statsmodels = "^0.13.2"
httpstan = {path = "../httpstan/dist/httpstan-4.8.2-cp310-cp310-macosx_12_0_arm64.whl"}
pystan = "^3.5.0"
nest-asyncio = "^1.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
